--- a/dataimport.Rmd
+++ b/dataimport.Rmd
@@ -33,7 +33,7 @@ skimr::skim(litters_df)
 Read in an Excel file
 
 ```{r}
-mlb_df = read_excel("./data_import_examples/mlb11.xlsx")
+mlb_df = read_excel("./data_import_examples/mlb11.xlsx", range= "A1:F7")
 mlb_df
 ```
 
@@ -46,5 +46,12 @@ litters_base = read.csv("./data_import_examples/FAS_litters.csv")
 litters_readr = read_csv("./data_import_examples/FAS_litters.csv")
 litters_base
 litters_readr
+```
+
+## Exporting data
+
+Export the MLB sub-table
+```{r}
+write_csv(mlb_df, "./data_import_examples/mlb_subtable.csv")
 ```
 
