--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -7,4 +7,9 @@ author: Ben Lebwohl
 ```{r}
 library(tidyverse)
 ```
+## Load the FAS Litters data
+```{r}
+litters_df = read_csv("./data_import_examples/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
+```
 
