--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -13,3 +13,38 @@ litters_df = read_csv("./data_import_examples/FAS_litters.csv")
 litters_df = janitor::clean_names(litters_df)
 ```
 
+## 'select'
+
+Choose some columns and not others
+
+```{r}
+select(litters_df, group, gd0_weight)
+```
+
+
+```{r}
+select(litters_df, group, gd0_weight:gd_of_birth)
+```
+
+```{r}
+select(litters_df, -litter_number)
+```
+
+```{r}
+select(litters_df, variable_one = group, variable_two = litter_number)
+```
+
+```{r}
+rename(litters_df, variable_one = group, variable_two = litter_number)
+```
+
+Select helpers
+
+```{r}
+select(litters_df, starts_with("gd"))
+```
+
+```{r}
+select(litters_df, litter_number, everything())
+```
+
