--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -48,3 +48,33 @@ select(litters_df, starts_with("gd"))
 select(litters_df, litter_number, everything())
 ```
 
+## 'filter' 
+```{r}
+filter(litters_df, gd0_weight <22)
+```
+```{r}
+filter(litters_df, gd0_weight >=22)
+```
+
+```{r}
+filter(litters_df, gd_of_birth == 20)
+```
+
+```{r}
+filter(litters_df, !(gd_of_birth == 20))
+```
+
+```{r}
+filter(litters_df, gd0_weight >= 20, gd_of_birth == 20)
+```
+
+```{r}
+filter(litters_df, group == "Mod8")
+```
+
+```{r}
+filter(litters_df, group %in% c("Con7","Mod8"))
+```
+
+
+
