--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -86,3 +86,14 @@ mutate(
        )
 ```
 
+## 'arrange'
+```{r}
+arrange(litters_df, pups_born_alive)
+```
+
+```{r}
+arrange(litters_df, pups_born_alive, gd0_weight)
+```
+
+
+
