--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -16,3 +16,33 @@ pulse_data=
   janitor::clean_names()
 ```
 
+Wide format to long format
+
+```{r}
+pulse_data_tidy = 
+  pulse_data %>% 
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m, 
+    names_to = "visit",
+    names_prefix = "bdi_score_",
+    values_to = "bdi"
+  )
+```
+
+Rewrite, combine, and extend (to add a mutate step)
+
+```{r}
+pulse_data=
+  sas7bdat::read.sas7bdat ("./data_import_examples/public_pulse_data.sas7bdat") %>%
+  janitor::clean_names() %>%
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m, 
+    names_to = "visit",
+    names_prefix = "bdi_score_",
+    values_to = "bdi"
+  ) %>%
+  relocate(id, visit) %>%
+  mutate(visit = recode(visit, "bl" = "00m"))
+
+```
+
